# mmt

./: README.md
Practicum01/: 2011-tms-practicum1-sample1.rle.tga  2011-tms-practicum1-sample2.rle.tga  CMakeLists.txt  README.txt
Practicum01/src/: Color.cpp  Color.h  ConfigReader.cpp  ConfigReader.h  Image.h  ParserTest.cpp  Tga.cpp  Tga.h  main.cpp  tmspracticum3.cpp
Practicum02/: CMakeLists.txt  README.txt
Practicum02/decoder/win32/: inttypes.h
Practicum02/encoder/: ConfigReader.cpp
Practicum02/src/: BitStream.h  Block.cpp  Block.h  ConfigReader.cpp  ConfigReader.h  DCT.cpp  DCT.h  Enc.cpp  Enc.h  Linearizer.cpp  Linearizer.h  Quantizer.cpp  Quantizer.h  RLE.cpp  RLE.h  Raw.cpp  Raw.h  decoder.cpp  encoder.cpp
Practicum02/src/win32/: stdint.h
Practicum02/testcases/: matrix.txt  settings.conf  test01.raw
Practicum03/: CMakeLists.txt
Practicum03/src/: Block.h  DCT.h  Enc.cpp  Quantizer.h  RLE.cpp  Yuv.cpp  Yuv.h  decoder.cpp  encoder.cpp
